# serializer version: 1
# name: test_form
  list([
    tuple(
      'uplink',
      'access',
      'import',
      'ha2',
      'abc123xyz',
      '--force',
    ),
  ])
# ---
# name: test_form.1
  list([
    tuple(
      'abc123xyz',
    ),
    tuple(
    ),
  ])
# ---
# name: test_form.2
  tuple(
    'my.storj-satellite.io',
  )
# ---
# name: test_form_cannot_connect
  list([
    tuple(
      'uplink',
      'access',
      'import',
      'ha2',
      'abc123xyz',
      '--force',
    ),
  ])
# ---
# name: test_form_cannot_connect.1
  tuple(
    'my.storj-satellite.io',
  )
# ---
# name: test_form_invalid_auth
  list([
    tuple(
      'uplink',
      'access',
      'import',
      'ha2',
      'abc123xyz',
      '--force',
    ),
  ])
# ---
# name: test_form_uplink_already_installed
  list([
    tuple(
      'which',
      'uplink',
    ),
    tuple(
      'uplink',
      'access',
      'import',
      'ha2',
      'abc123xyz',
      '--force',
    ),
  ])
# ---
# name: test_form_uplink_needs_installation
  list([
    tuple(
      'which',
      'uplink',
    ),
    tuple(
      'curl',
      '-L',
      'https://github.com/storj/storj/releases/latest/download/uplink_linux_arm64.zip',
      '-o',
      'uplink_linux_arm64.zip',
    ),
    tuple(
      'unzip',
      '-o',
      'uplink_linux_arm64.zip',
    ),
    tuple(
      'install',
      'uplink',
      '/usr/local/bin/uplink',
    ),
    tuple(
      'uplink',
      'access',
      'import',
      'ha2',
      'abc123xyz',
      '--force',
    ),
  ])
# ---
